# scb-datagen

./: .gitignore  CLAUDE.md  CRITIQUE.md  README.md  pyproject.toml
docs/: DESIGN_PRINCIPLES.md
scripts/: generate.py
src/: cli.py  models.py
src/config/: defaults.yaml
src/generators/: base.py  frames.py  proposition.py  scenario.py
src/pipeline/: checkpoint.py  orchestrator.py
src/utils/: config.py  dedup.py  llm.py
src/validators/: diversity.py  factual.py  quality.py
tests/: test_config.py  test_generation_quality.py  test_generators.py  test_models.py
